feat: Convert gist controller responses to concrete types
